--- a/index.html
+++ b/index.html
@@ -60,26 +60,30 @@
             <th>วัน</th>
             <th>เวลา</th>
             <th>วิชา</th>
-            <th>อาจารย์</th>
+            <th>อาคาร</th>
             <th>ห้อง</th>
+            <th>อาจารย์</th>
         </tr>
         
         <tr>
             <td>จันทร์</td>
             <td>09.00-11.30</td>
             <td>CSI101 (ปฏิบัติ)</td>
-            <td>อ.วุฏฐชัย</td>
+            <td>อาคาร 5 - สยามบรมราชกุมารี</td>
             <td>05-0901</td>
+            <td>อ.วุฏฐชัย</td>
         </tr>
         <tr>
             <td></td>   
             <td>12.00-14.30</td>
             <td>CSI102</td>
-            <td>อ.เบล</td>
+            <td>อาคาร 5 - สยามบรมราชกุมารี</td>
             <td>05-0409</td>
+            <td>อ.เบล</td>
         </tr>
         <tr>
             <td>อังคาร</td>
+            <td>-</td>
             <td>-</td>
             <td>-</td>
             <td>-</td>
@@ -89,25 +93,29 @@
             <td>พุธ</td>
             <td>9.00-10.40</td>
             <td>USC10967</td>
-            <td>อ.มาลิวรรณ</td>
             <td>-</td>
+            <td>-</td>
+            <td>อ.มาลิวรรณ</td>
         </tr>
         <tr>
             <td></td>
             <td>13.00-14.40</td>
             <td>CSI101 (ทฤษฏี)</td>
-            <td>อ.วุฏฐชัย</td>
+            <td>อาคาร 5 - สยามบรมราชกุมารี</td>
             <td>05-0404</td>
+            <td>อ.วุฏฐชัย</td>
         </tr>
         <tr>
             <td>พฤหัสบดี</td>
             <td>13.00-14.40</td>
             <td>CSI199</td>
-            <td>อ.มาสวีร์</td>
+            <td>อาคาร 1 - ดร.สุข พุคยาภรณ์</td>
             <td>01-0500</td>
+            <td>อ.มาสวีร์</td>
         </tr>
         <tr>
             <td>ศุกร์</td>
+            <td>-</td>
             <td>-</td>
             <td>-</td>
             <td>-</td>
