--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             border-collapse: collapse; /* ลบเส้นขอบคู่ */
             margin: 25px 0;
             font-size: 0.85em;
-            font-family: Tahoma, sans-serif;
+            font-family: Tahoma, sans-serif;         
             min-width: 600px;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.15); /* เพิ่มเงาให้ตารางดูมีมิติ */
             border: 2px solid #000000;
@@ -34,12 +34,12 @@
         /* 4. สไตล์สำหรับแถวข้อมูล (Tbody) */
         .styled-table tbody tr {
             border-bottom: 1px solid #dddddd;
-            background-color: #ffffff;
+            background-color: #aeaeae;
         }
 
         /* 5. สลับสีแถวเพื่อให้แยกแยะง่ายขึ้น (Optional: zebra stripes) */
         .styled-table tbody tr:nth-of-type(even) {
-            background-color: #f3f3f3; /* สีเทาอ่อนสำหรับแถวคู่ */
+            background-color: #ffffff; /* สีเทาอ่อนสำหรับแถวคู่ */
         }
         
         /* 6. การจัดตำแหน่งข้อความในคอลัมน์ต่างๆ */
@@ -66,23 +66,23 @@
         </tr>
         
         <tr>
-            <td>จันทร์</td>
-            <td>09.00-11.30</td>
+            <td style="font-size: 15px;">จันทร์</td>
+            <td style="font-size: 30px;">09.00-11.30</td>
             <td>CSI101 (ปฏิบัติ)</td>
-            <td>อาคาร 5 - สยามบรมราชกุมารี</td>
-            <td>05-0901</td>
-            <td>อ.วุฏฐชัย</td>
+            <td style="font-size: 20px;">อาคาร 5 - สยามบรมราชกุมารี</td>
+            <td style="font-size: 15px;">05-0901</td>
+            <td style="font-size: 14px;">อ.วุฏฐชัย ชุ่มเย็น</td>
         </tr>
         <tr>
             <td></td>   
-            <td>12.00-14.30</td>
+            <td style="font-size: 30px;">12.00-14.30</td>
             <td>CSI102</td>
-            <td>อาคาร 5 - สยามบรมราชกุมารี</td>
-            <td>05-0409</td>
-            <td>อ.เบล</td>
+            <td style="font-size: 20px;">อาคาร 5 - สยามบรมราชกุมารี</td>
+            <td style="font-size: 15px;">05-0409</td>
+            <td style="font-size: 14px;">อ.ทิพย์อรุณ เขี้ยวแก้ว</td>
         </tr>
         <tr>
-            <td>อังคาร</td>
+            <td style="font-size: 15px;">อังคาร</td>
             <td>-</td>
             <td>-</td>
             <td>-</td>
@@ -90,31 +90,31 @@
             <td>-</td>
         </tr>
         <tr>
-            <td>พุธ</td>
-            <td>9.00-10.40</td>
+            <td style="font-size: 15px;">พุธ</td>
+            <td style="font-size: 30px;">9.00-10.40</td>
             <td>USC10967</td>
             <td>-</td>
             <td>-</td>
-            <td>อ.มาลิวรรณ</td>
+            <td style="font-size: 14px;">อ.มาลิวรรณ บุญพลอย</td>
         </tr>
         <tr>
             <td></td>
-            <td>13.00-14.40</td>
+            <td style="font-size: 30px;">13.00-14.40</td>
             <td>CSI101 (ทฤษฏี)</td>
-            <td>อาคาร 5 - สยามบรมราชกุมารี</td>
-            <td>05-0404</td>
-            <td>อ.วุฏฐชัย</td>
+            <td style="font-size: 20px;">อาคาร 5 - สยามบรมราชกุมารี</td>
+            <td style="font-size: 15px;">05-0404</td>
+            <td style="font-size: 14px;">อ.วุฏฐชัยชุ่มเย็น</td>
         </tr>
         <tr>
-            <td>พฤหัสบดี</td>
-            <td>13.00-14.40</td>
+            <td style="font-size: 15px;">พฤหัสบดี</td>
+            <td style="font-size: 30px;">13.00-14.40</td>
             <td>CSI199</td>
-            <td>อาคาร 1 - ดร.สุข พุคยาภรณ์</td>
-            <td>01-0500</td>
-            <td>อ.มาสวีร์</td>
+            <td style="font-size: 20px;">อาคาร 1 - ดร.สุข พุคยาภรณ์</td>
+            <td style="font-size: 15px;">01-0500</td>
+            <td style="font-size: 14px;">อ.มาสวีร์ มาศดิศรโชติ</td>
         </tr>
         <tr>
-            <td>ศุกร์</td>
+            <td style="font-size: 15px;">ศุกร์</td>
             <td>-</td>
             <td>-</td>
             <td>-</td>
